--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,6 +64,7 @@
 	<script src="lib/js/controllers/AnuncioController.js"></script>
 	<script src="lib/js/controllers/AnuncioModalidadeController.js"></script>
 	<script src="lib/js/controllers/AnuncioTodosController.js"></script>
+	<script src="lib/js/controllers/UsuarioCadastroController.js"></script>
 	<!-- DIRECTIVES -->
 
 	<script src="lib/js/directives/limitTo-directive.js"></script>
@@ -117,7 +118,7 @@
 						</li>
 						<li ng-if="logado">
 							<i class="icon-user"></i>
-							<a ng-bind="usuario"></a>
+							<a ng-bind="nomeUsuario"></a>
 						</li>
 						<li ng-if="logado"><i class="icon-close" ng-click="logout()"></i></li>
 					</ul>
@@ -168,7 +169,7 @@
 									</ul>
 								</li>
 								<li ng-if="logado">
-									<a href="#/sportsgo/esportes/novo">Cadastrar</a>
+									<a href="" ng-click="verificarCadastroUsuario()">Cadastrar</a>
 								</li>
 								<li>
 									<a href="" ng-click="carregarAnuncios()">Todos</a>
@@ -202,7 +203,7 @@
 			</p>
 		</div>
 		
-		<div growl class="col-md-6 col-md-offset-3 pull-right"></div>
+		<div growl class="col-md-4 col-md-offset-3 pull-right"></div>
 		<ng-view>
 		</ng-view>
 
