--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
@@ -64,6 +63,7 @@
 	<script src="lib/js/controllers/AnuncioController.js"></script>
 	<script src="lib/js/controllers/AnuncioModalidadeController.js"></script>
 	<script src="lib/js/controllers/AnuncioTodosController.js"></script>
+	<script src="lib/js/controllers/AnuncioDetalheController.js"></script>
 	<script src="lib/js/controllers/UsuarioCadastroController.js"></script>
 	<!-- DIRECTIVES -->
 
@@ -169,7 +169,7 @@
 									</ul>
 								</li>
 								<li ng-if="logado">
-									<a href="" ng-click="verificarCadastroUsuario()">Cadastrar</a>
+									<a href="#/sportsgo/anuncio/novo" ng-click="verificarCadastroUsuario()">Cadastrar</a>
 								</li>
 								<li>
 									<a href="" ng-click="carregarAnuncios()">Todos</a>
