--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,6 +49,7 @@
 	<script src="lib/js/angular/angular-route.js"></script>
 	<script src="lib/js/angular/angular-animate.min.js"></script>
 	<script src="lib/js/angular/angular-growl.js"></script>
+	<script src="lib/js/angular/angular-animate.js"></script>
 
 	<!-- CONFIG MODULO -->
 	<script src="lib/js/sportsgo.js"></script>
@@ -65,6 +66,9 @@
 	<script src="lib/js/controllers/AnuncioTodosController.js"></script>
 	<script src="lib/js/controllers/AnuncioDetalheController.js"></script>
 	<script src="lib/js/controllers/UsuarioCadastroController.js"></script>
+	<script src="lib/js/controllers/AnuncioPendenteController.js"></script>
+	<script src="lib/js/controllers/AnuncioBloqueadoController.js"></script>
+
 	<!-- DIRECTIVES -->
 
 	<script src="lib/js/directives/limitTo-directive.js"></script>
@@ -72,7 +76,7 @@
 	<script src="lib/js/directives/fileUpload-directive.js"></script>
 	<script src="lib/js/directives/owlCarousel-directive.js"></script>
 	<script src="lib/js/directives/owlCarouselItem-directive.js"></script>
-	
+
 
 	<!-- SERVICES -->
 	<script src="lib/js/services/usuario-service.js"></script>
@@ -154,12 +158,12 @@
 
 						<li class="dropdown">
 							<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-                                Eventos
+                                Anúncios
                             </a>
 							<ul class="dropdown-menu">
 
 								<li class="dropdown-submenu">
-									<a href="javascript:void(0);">Por Esporte</a>
+									<a href="javascript:void(0);">Categorias</a>
 									<ul class="dropdown-menu">
 										<li ng-repeat="modalidade in modalidades">
 											<a href="" ng-click="carregarAnunciosPorCategoria(modalidade)">
@@ -169,10 +173,25 @@
 									</ul>
 								</li>
 								<li ng-if="logado">
-									<a href="#/sportsgo/anuncio/novo" ng-click="verificarCadastroUsuario()">Cadastrar</a>
+									<a href="" ng-click="verificarCadastroUsuario()">Cadastrar</a>
 								</li>
-								<li>
-									<a href="" ng-click="carregarAnuncios()">Todos</a>
+								<li ng-if="logado !== admin">
+									<a href="" ng-click="carregarAnunciosUsuario()">Meus anúncios</a>
+								</li>
+								<li ng-if="logado !== admin">
+									<a href="" ng-click="carregarAnunciosEmAnalisePorUsuario()">Meus pendentes</a>
+								</li>
+								<li ng-if="admin">
+									<a href="" ng-click="carregarAnunciosPublicados()">Publicados</a>
+								</li>
+								<li ng-if="admin">
+									<a href="" ng-click="carregarAnunciosEmAnalise()">Em análise</a>
+								</li>
+								<li ng-if="admin">
+									<a href="" ng-click="carregarAnunciosBloqueados()">Bloqueados</a>
+								</li>
+								<li ng-if="logado !== admin">
+									<a href="" ng-click="carregarAnunciosPublicados()">Todos</a>
 								</li>
 
 							</ul>
@@ -202,7 +221,7 @@
 				<span class="fa fa-spinner fa-spin fa-3x"></span>
 			</p>
 		</div>
-		
+
 		<div growl class="col-md-4 col-md-offset-3 pull-right"></div>
 		<ng-view>
 		</ng-view>
