Implementação exclusão de anúncios

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="sportsgo">
+<html lang="pt-br" ng-app="sportsgo">
 
 <head>
 	<title>Sports GO</title>
@@ -69,6 +69,7 @@
 	<script src="lib/js/controllers/AnuncioPendenteController.js"></script>
 	<script src="lib/js/controllers/AnuncioBloqueadoController.js"></script>
 	<script src="lib/js/controllers/AnunciosUsuarioController.js"></script>
+	<script src="lib/js/controllers/AnuncioEditarController.js"></script>
 
 	<!-- DIRECTIVES -->
 
